Mise à jour des composants Cta et Expertise avec des modifications de contenu et de style
- Changement du texte du bouton dans le composant Cta pour "Discuter de votre situation".
- Révision des sections d'expertise dans le composant Expertise, avec ajout de descriptions pour chaque domaine juridique, incluant Droit fiscal, Droit des affaires, Droit social, Droit de la famille, Droit de la propriété intellectuelle, Contentieux divers, Rédactions d'actes, Droit Immobilier et Droit des Contrats.
- Amélioration des styles pour une présentation plus cohérente et engageante.

--- a/src/components/Cta.astro
+++ b/src/components/Cta.astro
@@ -75,7 +75,7 @@ import SectionDivider from "./SectionDivider.astro";
         class="group inline-flex items-center justify-center px-8 py-4 font-bold text-white bg-info/40 border-2 border-white rounded-lg overflow-hidden transition-all duration-300 hover:bg-info/60 hover:shadow-lg hover:shadow-info/30"
       >
         <span class="flex items-center">
-          Rencontrer nos avocats
+          Découvrir notre équipe
           <svg
             xmlns="http://www.w3.org/2000/svg"
             class="h-5 w-5 ml-2 transform group-hover:translate-x-1 transition-transform"
