--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -6,7 +6,9 @@ import Hero from "../components/Hero.astro";
 import Values from "../components/Values.astro";
 import Expertise from "../components/Expertise.astro";
 import Equipe from "../components/Equipe.astro";
+import Faq from "../components/Faq.astro";
 import Contact from "../components/Contact.astro";
+
 import { SITE_TITLE, SITE_DESCRIPTION } from "../consts";
 ---
 
@@ -130,8 +132,8 @@ import { SITE_TITLE, SITE_DESCRIPTION } from "../consts";
         <Values />
         <Expertise />
         <Equipe />
+        <Faq />
         <Contact />
-        
       </div>
     </main>
     <Footer />
