Mise à jour des couleurs et des styles dans les composants de l'interface utilisateur
- Ajout de nouvelles couleurs personnalisées dans la configuration de Tailwind, incluant jet, caribbean, white, platinum et indigo.
- Révision des couleurs de fond et de texte dans les composants Contact, Expertise, Faq, Footer, et MainNav pour une meilleure cohérence visuelle.
- Remplacement des anciennes couleurs par les nouvelles dans les décorations de section et les éléments de navigation.
- Amélioration générale des styles pour une présentation plus moderne et engageante.

--- a/src/components/Contact.astro
+++ b/src/components/Contact.astro
@@ -14,19 +14,11 @@ import SectionDecoration from "./SectionDecoration.astro";
     variant="triangle"
     position="top"
     flip={true}
-    color="#E7E8E9"
+    color="#d9d9d9"
     bgColor="white"
   />
-  <SectionDecoration
-    variant="circles"
-    position="top-left"
-    color="hsl(var(--primary))"
-  />
-  <SectionDecoration
-    variant="lines"
-    position="bottom-right"
-    color="hsl(var(--info))"
-  />
+  <SectionDecoration variant="circles" position="top-left" color="#3c6e71" />
+  <SectionDecoration variant="lines" position="bottom-right" color="#284b63" />
 
   <div class="max-w-7xl mx-auto px-4 sm:px-6 lg:px-8 relative z-10">
     <div class="text-center mb-16" data-animate="fade-in">
