--- a/src/components/Values.astro
+++ b/src/components/Values.astro
@@ -4,16 +4,8 @@ import SectionDecoration from "./SectionDecoration.astro";
 ---
 
 <section class="relative py-24 bg-white" id="valeurs">
-  <SectionDecoration
-    variant="dots"
-    position="top-right"
-    color="hsl(var(--primary))"
-  />
-  <SectionDecoration
-    variant="circles"
-    position="bottom-left"
-    color="hsl(var(--info))"
-  />
+  <SectionDecoration variant="dots" position="top-right" color="#3c6e71" />
+  <SectionDecoration variant="circles" position="bottom-left" color="#284b63" />
 
   <div class="max-w-7xl mx-auto px-4 sm:px-6 lg:px-8 relative z-10">
     <div class="text-center mb-16" data-animate="fade-in">
