--- a/src/components/Expertise.astro
+++ b/src/components/Expertise.astro
@@ -8,19 +8,11 @@ import SectionDecoration from "./SectionDecoration.astro";
     variant="curve"
     position="top"
     flip={true}
-    color="#E7E8E9"
+    color="#d9d9d9"
     bgColor="white"
   />
-  <SectionDecoration
-    variant="circles"
-    position="top-right"
-    color="hsl(var(--success))"
-  />
-  <SectionDecoration
-    variant="dots"
-    position="bottom-left"
-    color="hsl(var(--warning))"
-  />
+  <SectionDecoration variant="circles" position="top-right" color="#3c6e71" />
+  <SectionDecoration variant="dots" position="bottom-left" color="#284b63" />
 
   <div class="max-w-7xl mx-auto px-4 sm:px-6 lg:px-8 relative z-10">
     <div class="text-center mb-16" data-animate="fade-in">
